...
        android:orientation="vertical">

      <FrameLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content">
        <TextView
            android:id="@+id/page_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_navigation_rail_page_1_name"/>
        <TextView
            android:id="@+id/page_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_navigation_rail_page_2_name"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/page_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_navigation_rail_page_3_name"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/page_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_navigation_rail_page_4_name"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/page_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_navigation_rail_page_5_name"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/page_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_navigation_rail_page_6_name"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/page_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_navigation_rail_page_7_name"
            android:visibility="gone"/>
      </FrameLayout>

...
