...
  <string name="cat_shape_theming_description">
    Material surfaces can be displayed in different shapes. Shapes direct attention, identify
    components, communicate state, and express brand. Shape Theming provides a simple way to theme
    shapes throughout an app.
  </string>

  <string name="cat_shape_theming_dialog_title">Title</string>
  <string name="cat_shape_theming_dialog_message">Message</string>
  <string name="cat_shape_theming_dialog_ok">OK</string>

  <string name="cat_shape_theming_crane_demo_title">Crane Demo</string>
  <string name="cat_shape_theming_fortnightly_demo_title">Fortnightly Demo</string>
  <string name="cat_shape_theming_shrine_demo_title">Shrine Demo</string>
...
