...
        android:layout_height="wrap_content"
        app:layout_scrollFlags="scroll|enterAlways|snap"
        app:layout_scrollEffect="compress"
        app:title="@string/cat_topappbar_compress_toolbar_title" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_scrollFlags="scroll|enterAlways"
        android:background="@android:color/transparent"
        android:visibility="gone"
        app:tabMode="scrollable">
...
